# notebooks

./: Broadcasting.ipynb  Convolution.ipynb  Inteview Question Bank.ipynb  Linear Algebra.ipynb  Neural Network.ipynb  Scratch.ipynb  Semantic Router.ipynb  Vectorization.ipynb  numpy vectors.ipynb  pyproject.toml
